--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ target/
 src/main/resources/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-!**/src/TestZip/**/target/
+!**/src/ZipTest/**/target/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
@@ -31,7 +31,7 @@ src/main/resources/
 /.nb-gradle/
 build/
 !**/src/main/**/build/
-!**/src/TestZip/**/build/
+!**/src/ZipTest/**/build/
 
 ### VS Code ###
 .vscode/
